Fix End Time input overflow on mobile timeline edit

--- a/app/assets/stylesheets/timeline_events.css
+++ b/app/assets/stylesheets/timeline_events.css
@@ -487,6 +487,14 @@
     font-size: 1rem;
   }
 
+  .timeline-duration-end {
+    width: 100%;
+  }
+
+  .timeline-duration-field-wrapper {
+    width: 100%;
+  }
+
   /* Mobile timeline header adjustments */
   .timeline-header-card {
     margin-left: 0;
